--- a/app/css/UglyAdventure.css
+++ b/app/css/UglyAdventure.css
@@ -1,8 +1,7 @@
 body {
 	margin: 0px;
 	padding: 0px;
-	background-color: black;
-	color: white;
+	background-color: #335749; /* #eaeaea */;
 	font-size: large;
 }
 
@@ -14,8 +13,8 @@ div#log {
 	width: 70%;
 	/*height: 100%;*/
 	overflow-y:scroll;
-	background-color: black;
-	color: white;
+	background-color: #F3E0AC;
+	color: #348017;
 	/*margin: 1.5em;*/
 	padding: .5em;
 	-webkit-border-radius: 20px;
@@ -35,8 +34,7 @@ div#actionBar {
 
 input#actionInput {
 	height: 2.5em;
-	background-color: black;
-	color: white;
+	background-color: #F3E0AC;
 	-webkit-border-radius: 20px;
 	border-radius: 20px; 
 	font-family: 'Alike', serif;
@@ -63,8 +61,8 @@ div#inventoryDiv {
 div.helperList {
 	margin: 0;
 	padding: 0;
-	color: white;
-	background-color: black;
+	color: #348017;
+	background-color: #2f0000;
 	-webkit-border-top-left-radius: 20px;
 	-webkit-border-top-right-radius: 20px;
 	-moz-border-radius-topleft: 20px;
@@ -81,8 +79,8 @@ div.helperList {
 
 .header {
 	text-align: center;
-	background-color: black;	
-	color: white;
+	background-color: #7F462C;	
+	color: #ECD672;
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
@@ -101,11 +99,14 @@ span.speech {
 
 .location {
 	font-family: 'Cinzel', serif;
+	background-color: inherit;
+	color: #024003;
+	background-color: #F3E0AC;
 }
 
 div.location {
 	margin-top: 1em;
-	color: white;
+	color: #024003;
 }
 
 div#appHeader {
@@ -124,10 +125,14 @@ div#appHeader, div#appMenu {
 	text-align: center;
 	padding-left: 1em;
 	padding-right: 1em;
-	background-color: black;	
-	color: white;
+	background-color: #2F0000;	
+	color: #ECD672;
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
 
+}
+
+a:visited, a:link {
+	color: #ECD672;
 }
