--- a/app/css/style.css
+++ b/app/css/style.css
@@ -28,10 +28,9 @@ div#log {
 div#actionBar {
 	position: absolute;
 	bottom: 0;
-	left: 3em;
-	width: 70%;
+	left: 0;
+	width: 72%;
 	margin: none; 
-	
 }
 
 input#actionInput {
